force-app/main/default/objects/OrderItemSummary/fields/Configuration_Smart_String__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Smart_String__c</fullName>
    <label>Configuration Smart String</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>