force-app/main/default/objects/OrderItemSummary/fields/LineMiscCharge__c.field-meta.xml
<CustomField>
    <fullName>LineMiscCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LineMiscCharge</label>
    <type>Checkbox</type>
</CustomField>