force-app/main/default/objects/OrderItemSummary/fields/Misc_Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Misc_Charge_Code__c</fullName>
    <label>Misc Charge Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>